--- a/templates/index.html
+++ b/templates/index.html
@@ -28,9 +28,6 @@
 						<ion-icon name="search"></ion-icon>
 					</button>
 				</div>
-				
-				
-
 				<button class="action-btn menu-action" data-mobile-menu-open-btn>
 					<ion-icon name="menu"></ion-icon>
 				</button>
@@ -632,6 +629,6 @@
 	<script type="text/javascript" src="{% static 'script.js' %}"></script>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="{% static 'search.js' %}"></script>
-	<script src="{% static 'cart.js' %}"></script>
+	<script type="text/javascript" src="{% static 'cart.js' %}"></script>
 </body>
 </html>
