--- a/templates/category-wise.html
+++ b/templates/category-wise.html
@@ -28,9 +28,6 @@
 						<ion-icon name="search"></ion-icon>
 					</button>
 				</div>
-				
-				
-
 				<button class="action-btn menu-action" data-mobile-menu-open-btn>
 					<ion-icon name="menu"></ion-icon>
 				</button>
@@ -48,39 +45,50 @@
 					<button id="select-image" class="action-btn">
 						<img src="{%static 'prescription.png'%}" alt="prescription-upload-icon" width="30">
 					</button>
-					<button id="user-login-btn" class="action-btn">
+					<button id="user-login-btn" class="action-btn" >
 						<ion-icon name="person-outline"></ion-icon>
 					</button>
-					<button id="cart-btn" class="action-btn">
+
+
+					<button id="cart-btn" class="action-btn" >
 						<ion-icon name="bag-outline"></ion-icon>
 						<span class="btn-badge">3</span>
 					</button>
-					<div class="shopping-cart" >
-						<!-- HTML template for a product cartbox -->
-						<div id= "cart-container">
-							<!-- <div class="cartbox" id="cartbox-${p_id}">
-							  <button class="cart-trash">
-								<ion-icon name="trash"></ion-icon>
-							  </button>
-							  <img src="" alt="">
-							  <div class="cart-content">
-								<h3 id="productName-${p_id}"></h3>
-								<div style="display: grid; grid-template-columns: 0.5fr 1fr; gap: 1px;">
-								  <span class="cart-content-price" id="productPrice-${p_id}"></span>
-								  <span class="quantity"></span><br>
-								  <span class="quantity">Days: 7</span>
-								</div>
-							  </div>
-							</div> -->
-						  </div>
-						  
-						  <div class="total"></div>
-						  {% if user.is_authenticated %}
-						<a  class="cart-checkout-btn" id="checkout-button">Checkout</a>
-					{% else %}
-					<a href="{% url 'mylogin' %}" class="cart-checkout-btn" id="">Checkout</a>
-					{% endif %}
-				</div>
+						<div class="shopping-cart" >
+								<!-- HTML template for a product cartbox -->
+								<div id= "cart-container">
+									<!-- <div class="cartbox" id="cartbox-${p_id}">
+									  <button class="cart-trash">
+										<ion-icon name="trash"></ion-icon>
+									  </button>
+									  <img src="" alt="">
+									  <div class="cart-content">
+										<h3 id="productName-${p_id}"></h3>
+										<div style="display: grid; grid-template-columns: 0.5fr 1fr; gap: 1px;">
+										  <span class="cart-content-price" id="productPrice-${p_id}"></span>
+										  <span class="quantity"></span><br>
+										  <span class="quantity">Days: 7</span>
+										</div>
+									  </div>
+									</div> -->
+								  </div>
+								  
+								  <div class="total"></div>
+								  {% if user.is_authenticated %}
+								<a  class="cart-checkout-btn" id="checkout-button">Checkout</a>
+						    {% else %}
+							<a href="{% url 'mylogin' %}" class="cart-checkout-btn" id="">Checkout</a>
+						    {% endif %}
+						</div>
+
+						<div style="text-align:center;" class="user-login">
+							{% if user.is_authenticated %}
+							<a href="{% url 'profile' %}" class="form-btn">Profile</a>
+							<a href="{% url 'mylogout' %}" class="form-btn">Logout</a>
+						    {% else %}
+							<a href="{% url 'mylogin' %}" class="form-btn">Login</a>
+						    {% endif %}
+						</div>
 				</div>
 			</div>
 		</div>
@@ -95,7 +103,7 @@
 						<div class="dropdown-panel">
 							<ul class="dropdown-panel-list">
 								<li class="menu-title">
-									
+								
 								</li>
 								<li class="panel-list-item"><a href="{%url 'category' p_category='Cold & Allergies'%}">Cold & Allergies</a></li>
 								<li class="panel-list-item"><a href="{%url 'category' p_category='Heart Problems'%}">Heart Problems</a></li>
@@ -180,7 +188,7 @@
 			</div>
 			<ul class="mobile-menu-category-list">
 				<li class="menu-category">
-					<a href="" class="menu-title">Home</a>
+					<a href="{%url 'home'%}" class="menu-title">Home</a>
 				</li>
 				<li class="menu-category">
 					<button class="accordion-menu" data-accordion-btn>
@@ -193,10 +201,10 @@
 
 					<ul class="submenu-category-list" data-accordion>
 						<li class="submenu-category">
-							<a href="{%url 'category' p_category='Mens'%}" class="submenu-title">Men's</a>
+							<a href="{%url 'category' p_category='MENS'%}" class="submenu-title">Men's</a>
 						</li>
 						<li class="submenu-category">
-							<a href="{%url 'category' p_category='Womens'%}" class="submenu-title">Women's</a>
+							<a href="{%url 'category' p_category='WOMEN'%}" class="submenu-title">Women's</a>
 						</li>
 						<li class="submenu-category">
 							<a href="{%url 'category' p_category='BABY CARE'%}"  class="submenu-title">Baby Care</a>
