--- a/templates/index.html
+++ b/templates/index.html
@@ -498,8 +498,10 @@
 								<img  class="product-img default" src="media/{{ product.p_image }}" alt="{{ product.p_name }}" width="300">
 								<img  class="product-img hover" src="media/{{ product.p_image }}" alt="{{ product.p_name }}" width="300">
 							</a>
-							<p class="showcase-badge">{{ product.p_discount|floatformat:"2" }}%</p>
-							
+							{% if product.p_discount > 0 %}
+   						 <p class="showcase-badge">{{ product.p_discount|floatformat:"2" }}%</p>
+							{% endif %}
+
 
 							<div  class="showcase-actions" >
 								<button id = "{{ product.p_id }}" class="btn-action" onclick="ClearCart()">
@@ -521,8 +523,10 @@
 							<div class="price-box">
 						
                              <p class="price">৳{{ product.discounted_price|floatformat:"2"}}</p>
+							 {% if product.p_discount > 0 %}
  
 								<del>{{ product.p_price|floatformat:"2" }}</del>
+								{% endif %}
 							</div>
 						</div>
 					
