--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -69,7 +69,7 @@
         </form>
         <div class="options">
             <a href="{% url 'myregister' %}">Register Now</a>
-            <a href="#">Forgot Password</a>
+            <a href="{% url 'forgotpassword' %}" class="form-btn">Forget Password</a>
         </div>
     </div>
 </body>
