--- a/static/product_day.css
+++ b/static/product_day.css
@@ -729,6 +729,7 @@ main .container {
     justify-content: center;
     border-radius: 12px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+	margin-bottom: 10px;
 }
 
 .product-details .quantity input {
@@ -798,12 +799,11 @@ main .container {
 	position: absolute;
 	flex-direction: column;
 	border-radius: 5px;
-	width: 271px;
 	overflow: hidden;
 	background: white;
 	box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
 	padding: 20px;
-	left: 43%;
+	left: 44%;
 	top: 0%;
 	z-index: 1;
 	max-height: 0;
@@ -838,6 +838,14 @@ main .container {
 	/* width: 100%; */
 	display: flex;
 	justify-content: space-between;
+}
+.addtolistddown .quantity {
+	width: 100%;
+	height: 40px;
+	margin: 15px auto;
+}
+.addtolistddown .addtolist {
+	padding: 10px 0;
 }
 .product-details .addtocart:hover,
 .product-details .buynow:hover {
@@ -1062,6 +1070,11 @@ main .container {
     .product-details .product-img {
         width: 100%;
     }
+
+	.product-details .addtolistddown {
+		left: 0%;
+		top: 50%;
+	}
 }
 
 @media (min-width: 480px) {
@@ -1103,7 +1116,7 @@ main .container {
 	}
 }
 
-@media (min-width: 570px) {
+@media (min-width: 576px) {
 	.header-main .container {
 		display: flex;
 		justify-content: space-between;
@@ -1128,6 +1141,17 @@ main .container {
     .product-details .product-img {
         width: 100%;
     }
+
+	.product-details .addtocart,
+	.product-details .addtolist {
+		font-size: 1rem;
+	}
+
+	.product-details .addtolistddown {
+		padding: 10px;
+		left: 45%;
+		top: 0%;
+	}
 	.footer-top .container {
 		grid-template-columns: 1fr 1fr;
 	}
@@ -1174,24 +1198,16 @@ main .container {
     .product-details h3 {
         font-size: var(--fs-6);
     }
-	.banner-content {
-		max-width: 380px;
+	
+	.product-details .addtolistddown {
+		left: 44%;
+		top: 0%;
 	}
 
-	.banner-subtitle {
-		--fs-7: 1.25rem;
+	.addtolistddown .addtolist {
+		font-size: 0.9rem;
 	}
 
-	.banner-text {
-		--fs-7: 1.125rem;
-	}
-	.banner-text b{
-		--fs-2: 1.875rem;
-	}
-
-	.banner-btn {
-		--fs-11: 0.75rem;
-	}
 	.footer-bottom .container {
 		display: flex;
 		justify-content: space-between;
@@ -1486,6 +1502,20 @@ main .container {
 
 	.product-grid {
 		grid-template-columns: repeat(4, 1fr) ;
+	}
+
+	.product-details .addtolistddown {
+		padding: 20px;
+		left: 43%;
+	}
+
+	.product-details .addtocart,
+	.product-details .addtolist {
+		font-size: 1.2rem;
+	}
+
+	.addtolistddown .addtolist {
+		font-size: 1.2rem;
 	}
 
 	.footer-top .container {
