--- a/static/style.css
+++ b/static/style.css
@@ -1087,7 +1087,7 @@ body::-webkit-scrollbar-thumb:hover {
 
 .product-grid .product-img {
 	width: 100%;
-	height: 100%;
+	aspect-ratio: 1.3 / 1;
 	object-fit: cover;
 	transition: 0.2s ease;
 }
