--- a/templates/product_day.html
+++ b/templates/product_day.html
@@ -299,7 +299,7 @@
 					<div class="buttons row">
 						<button class="addtocart col-sm-5" onclick="AddtoCart('{{product_details.p_id}}',parseInt(document.getElementById('num').innerText),'replace')">Add to Cart</button>
 						<button id="addtolist" class="addtolist col-sm-5">Add To List</button>
-						<div class="addtolistddown">
+						<div class="addtolistddown col-sm-5">
 							<div>
 								<input type="checkbox" name="MorningD" value="Morning">
 								<label for="Morning">Morning</label>
