--- a/static/user-profile.css
+++ b/static/user-profile.css
@@ -871,7 +871,7 @@ main .registration-form.active {
 
 .prescriptions.active {
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-template-columns: repeat(4, 1fr);
 	gap: 30px;
 }
 
