--- a/static/product_day.css
+++ b/static/product_day.css
@@ -658,6 +658,112 @@ body::-webkit-scrollbar-thumb:hover {
 	border-radius: 10px;
 	background-color: var(--red);
 }
+
+.toast-notification {
+	position: fixed;
+	/* height: 80px;
+	width: 320px; */
+	/* margin-bottom: 10px; */
+	top: 100px;
+	right: 30px;
+	/* padding: 20px 35px 20px 25px; */
+	
+	z-index: 1;
+	
+}
+.toast-success {
+	background-color: #a0ff7a;
+}
+
+.toast-error {
+	background-color: #ff7a7a;
+}
+
+
+.toast-notification .toast-content {
+	display: flex;
+	width: 320px;
+	height: 70px;
+	padding-left: 20px;
+	margin-bottom: 10px;
+	z-index: 2;
+	border-radius: 10px;
+	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+	border-left: 6px solid #4070f4;
+	overflow: hidden;
+	align-items: center;
+	transform: translateX(calc(100% + 30px));
+	transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.toast-notification .toast-content.active {
+	transform: translateX(0%);
+}
+
+.toast-content .check {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 30px;
+	width: 30px;
+	background-color: #4070f4;
+	color: #fff;
+	font-size: 20px;
+	border-radius: 50%;
+}
+
+.toast-content .message {
+	display: flex;
+	flex-direction: column;
+	margin: 0 20px;
+	font-size: 20px;
+	font-weight: 500;
+	color: #333;
+}
+
+.toast-notification .close {
+	position: absolute;
+	top: 10px;
+	right: 15px;
+	font-size: 20px;
+	cursor: pointer;
+	opacity: 0.7;
+	z-index: 3;
+}
+
+.toast-notification .close:hover {
+	opacity: 1;
+}
+
+.toast-notification .progress {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	height: 3px;
+	width: 100%;
+	background: #ddd;
+}
+
+.toast-notification .progress:before {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	height: 100%;
+	width: 100%;
+	background-color: #4070f4;
+}
+
+.toast-notification .progress.active:before{
+	animation: progress 5s linear forwards;
+}
+
+@keyframes progress {
+	100%{
+		right: 100%;
+	}
+}
+
 main .container {
 	padding: 20px 20px;
 }
