--- a/templates/product_day.html
+++ b/templates/product_day.html
@@ -8,13 +8,26 @@
 	<title>medE</title>
 	<link rel="icon" type="image/x-icon" href="{% static 'Favicon.png' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'product_day.css' %}">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
+	<!-- <div class="toast-notification" id="toast-container">
+		<div class="toast-content">
+			<i class="fas fa-solid fa-check"></i>
+			<ion-icon class="check" name="checkmark-outline"></ion-icon>
+
+			<div class="message">
+				<span class="text text-1">Success!</span>
+				<span class="text text-2">Your change has been saved!</span>
+			</div>
+		</div>
+		<ion-icon class="close" name="close-outline"></ion-icon>
+		<div class="progress"></div>
+	</div> -->
     <header>
 		<div class="header-main" data-header>
 			<div class="container">
@@ -32,9 +45,6 @@
 						<ion-icon name="search"></ion-icon>
 					</button>
 				</div>
-				
-				
-
 				<button class="action-btn menu-action" data-mobile-menu-open-btn>
 					<ion-icon name="menu"></ion-icon>
 				</button>
@@ -81,7 +91,14 @@
 						  </div>
 						  
 						<div class="total"></div>
-					<a href="#" class="cart-checkout-btn">Checkout</a>
+							{% if user.is_authenticated %}
+								<script>
+									var userPhoneNumber = "{{ user }}";
+								</script>
+							<a  class="cart-checkout-btn" id="checkout-button">Checkout</a>
+						{% else %}
+						<a href="{% url 'mylogin' %}" class="cart-checkout-btn" id="">Checkout</a>
+						{% endif %}
 					</div>
 
 					<div style="text-align:center;" class="user-login">
@@ -317,7 +334,7 @@
 								<input type="text" id="DayNumSpan" class="day-num" value="01">
 								<button class="day-increase-btn">+</button>
 							</div>
-							<button id="addtolist" class="addtolist col-sm-12" onclick="AddToList('{{ user }}', '{{ product_details.p_id }}')">Add To List</button>
+							<button id="addtolist" class="addtolist addtolist2 col-sm-12" onclick="AddToList('{{ user }}', '{{ product_details.p_id }}')">Add To List</button>
 						</div>
 						
 						<div id="message"></div>
@@ -487,8 +504,10 @@
 
  
     </script>
+
 	<script src="{% static 'cart.js' %}"></script>
 	<script src="{% static 'list.js' %}"></script>
+	<script src="{% static 'toast.js' %}"></script>
 
 </body>
 </html> 
