--- a/static/style.css
+++ b/static/style.css
@@ -827,6 +827,7 @@ body::-webkit-scrollbar-thumb:hover {
 	z-index: 10;
 }
 .img-area .elem-container {
+	position: relative;
 	display: flex;
 	background-color: white;
 	border-radius: 15px;
@@ -835,7 +836,7 @@ body::-webkit-scrollbar-thumb:hover {
 	align-items: center;
 	justify-content: center;
 }
-.img-area img {
+.img-area .elem-container img {
 	display: block;
 	position: absolute;
 	top: 50%;
@@ -863,22 +864,6 @@ body::-webkit-scrollbar-thumb:hover {
 	transition: all 0.3s ease;
 	z-index: 11;
 }
-.img-area .elem-container.active:hover::before {
-	opacity: 1;
-}
-.img-area .times {
-	display: grid;
-	gap: 2px;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-	padding: 10px 0;
-	width: 100%;
-}
-.img-area .times input[type="checkbox"] {
-    display: grid;
-	place-content: center;
-	border: 0px;
-	width: 40px;
-}
 
 .img-area .days {
 	display: grid;
@@ -888,6 +873,9 @@ body::-webkit-scrollbar-thumb:hover {
 	width: 100%;
 	place-content: center;
 	line-height: 30px;
+}
+.img-area .days label {
+	white-space: nowrap;
 }
 .img-area .days input[type="checkbox"] {
 	position: relative;
@@ -1348,6 +1336,22 @@ body::-webkit-scrollbar-thumb:hover {
 	.category-content-flex p {
 		margin-left: 4px;
 	}
+	.img-area .elem-container {
+		padding: 300px 20px 25px 25px;
+		height: 500px;
+		width: 90vw;
+	}
+	.img-area .elem-container img {
+		top: 42%;
+		height: 280px;
+		width: 280px;
+	}
+	.img-area .days input[type="checkbox"] {
+		width: 30px;
+	}
+	.days label {
+		font-size: 3.5vw;
+	}
 }
 
 @media (min-width: 480px) {
@@ -1387,11 +1391,20 @@ body::-webkit-scrollbar-thumb:hover {
 	.copyright {
 		--fs-8: 0.875rem;
 	}
-	.img-area .times input[type="checkbox"] {
-		width: 20px;
+	.img-area .elem-container {
+		height: 480px;
+		width: 400px;
 	}
-	.img-area .days input[type="checkbox"] {
-		width: 20px;
+	.img-area .elem-container {
+		padding: 300px 20px 25px 25px;
+	}
+	.img-area .elem-container img {
+		top: 42%;
+		height: 280px;
+		width: 280px;
+	}
+	.days label {
+		font-size: var(--fs-6);
 	}
 }
 
@@ -1417,9 +1430,15 @@ body::-webkit-scrollbar-thumb:hover {
 	.category-item {
 		min-width: calc(50% - 15px);
 	}
-	.img-area img {
-		height: 350px;
-		width: 100px;
+	.img-area .elem-container {
+		height: 500px;
+		width: 400px;
+	}
+
+	.img-area .elem-container img {
+		top: 45%;
+		height: 300px;
+		width: 300px;
 	}
 
 	.footer-top .container {
@@ -1495,15 +1514,12 @@ body::-webkit-scrollbar-thumb:hover {
 		justify-content: space-between;
 		align-items: center;
 	}
-
-	.img-area img {
+	.img-area .elem-container img {
+		top: 45%;
 		height: 300px;
 		width: 350px;
 	}
 	.img-area .times input[type="checkbox"] {
-		width: 30px;
-	}
-	.img-area .days input[type="checkbox"] {
 		width: 30px;
 	}
 }
@@ -1768,6 +1784,21 @@ body::-webkit-scrollbar-thumb:hover {
 	.navigation-manual,
 	.navigation-auto {
 		margin-top: 470px;
+	}
+
+	.img-area .elem-container.active:hover::before {
+		opacity: 1;
+	}
+	.img-area .elem-container {
+		padding: 500px 20px 25px 25px;
+		height: 650px;
+		width: 650px;
+	}
+
+	.img-area .elem-container img {
+		top: 50%;
+		height: 100%;
+		width: 100%;
 	}
 
 	/* CATEGORY */
